[gd_scene load_steps=26 format=3 uid="uid://b102sdydcdblj"]

[ext_resource type="Script" uid="uid://cascbrm6084tw" path="res://game_menu.gd" id="1_5rxej"]
[ext_resource type="Texture2D" uid="uid://dhfqj7r6fcv7x" path="res://assets/UI books & more.png" id="1_jowre"]
[ext_resource type="Texture2D" uid="uid://dafbal3p60kov" path="res://pixel-ball.png" id="2_rjxss"]
[ext_resource type="PackedScene" uid="uid://b4auljklap6ql" path="res://equip/EquipSlot.tscn" id="2_wr0q8"]
[ext_resource type="FontFile" uid="uid://btooiaidvf2ux" path="res://PressStart2P-Regular.ttf" id="3_jprcw"]
[ext_resource type="Texture2D" uid="uid://b4tj2mc674xlk" path="res://assets/Extra or Unfinished.png" id="5_qus6b"]
[ext_resource type="Texture2D" uid="uid://cuum1miyepyxw" path="res://assets/Orange Button Icons.png" id="5_xxfb2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_icggr"]
bg_color = Color(0.0862745, 0.352941, 0.298039, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_jprcw"]
atlas = ExtResource("1_jowre")
region = Rect2(437, 352, 9, 15)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5rxej"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xxfb2"]

[sub_resource type="Animation" id="Animation_5rxej"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(503, 686)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1348, 707)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("soon-text:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_jprcw"]
resource_name = "menu-idle"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(503, 686), Vector2(503, 715), Vector2(503, 744)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1348, 686), Vector2(1348, 715), Vector2(1348, 744)]
}

[sub_resource type="Animation" id="Animation_xxfb2"]
resource_name = "soon_text"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("soon-text:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.666667, 1.33333, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xxfb2"]
_data = {
&"RESET": SubResource("Animation_5rxej"),
&"menu-idle": SubResource("Animation_jprcw"),
&"soon_text": SubResource("Animation_xxfb2")
}

[sub_resource type="Animation" id="Animation_wr0q8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("soon-text:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_qus6b"]
resource_name = "soon-text"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("soon-text:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1.03333, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wr0q8"]
_data = {
&"RESET": SubResource("Animation_wr0q8"),
&"soon-text": SubResource("Animation_qus6b")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_xxfb2"]
atlas = ExtResource("5_xxfb2")
region = Rect2(1, 289, 30, 30)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qus6b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wr0q8"]
atlas = ExtResource("5_xxfb2")
region = Rect2(33, 289, 30, 30)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3rcmp"]
texture = SubResource("AtlasTexture_wr0q8")

[sub_resource type="AtlasTexture" id="AtlasTexture_pbvm6"]
atlas = ExtResource("5_xxfb2")
region = Rect2(1, 289, 30, 30)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yd342"]
texture = SubResource("AtlasTexture_pbvm6")

[sub_resource type="AtlasTexture" id="AtlasTexture_rjxss"]
atlas = ExtResource("1_jowre")
region = Rect2(768, 64, 48, 48)

[node name="GameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5rxej")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0328125
anchor_top = 0.0148148
anchor_right = 0.374479
anchor_bottom = 0.489815
offset_left = 34.0
offset_top = 32.0
offset_right = 34.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_icggr")

[node name="InventoryGrid" type="GridContainer" parent="PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/v_separation = 40

[node name="EquipPanel" type="GridContainer" parent="PanelContainer/InventoryGrid"]
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 100
columns = 2

[node name="WeaponEquipSlot" parent="PanelContainer/InventoryGrid/EquipPanel" instance=ExtResource("2_wr0q8")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="ArmorEquipSlot" parent="PanelContainer/InventoryGrid/EquipPanel" instance=ExtResource("2_wr0q8")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="AccessoryEquipSlot1" parent="PanelContainer/InventoryGrid/EquipPanel" instance=ExtResource("2_wr0q8")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="AccessoryEquipSlot2" parent="PanelContainer/InventoryGrid/EquipPanel" instance=ExtResource("2_wr0q8")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="DescriptionLabel" type="RichTextLabel" parent="PanelContainer/InventoryGrid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_jprcw")
theme_override_font_sizes/normal_font_size = 16
text = "Description"

[node name="Labels" type="CanvasLayer" parent="."]

[node name="PlayerLevelLabel" type="Label" parent="Labels"]
unique_name_in_owner = true
offset_left = 23.0
offset_top = 11.0
offset_right = 447.0
offset_bottom = 67.0
theme_override_colors/font_color = Color(0, 0.627451, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jprcw")
theme_override_font_sizes/font_size = 32
text = "Level 1"
horizontal_alignment = 1

[node name="CoinLabel" type="Label" parent="Labels"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 23.0

[node name="defense" type="Node2D" parent="Labels"]
position = Vector2(-213, 0)

[node name="DefenseLabel" type="Label" parent="Labels/defense"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.933333)
offset_left = 1067.0
offset_top = 359.0
offset_right = 1491.0
offset_bottom = 415.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jprcw")
theme_override_font_sizes/font_size = 42
text = "0"
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Labels/defense"]
position = Vector2(1213, 379)
scale = Vector2(4, 4)
texture = ExtResource("5_qus6b")
region_enabled = true
region_rect = Rect2(218, 24, 16, 16)

[node name="attack" type="Node2D" parent="Labels"]
position = Vector2(236, 0)

[node name="Sprite2D" type="Sprite2D" parent="Labels/attack"]
position = Vector2(533, 380)
scale = Vector2(4, 4)
texture = ExtResource("5_qus6b")
region_enabled = true
region_rect = Rect2(182, 98, 15, 14)

[node name="AttackDamageLabel" type="Label" parent="Labels/attack"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.933333)
offset_left = 393.0
offset_top = 359.0
offset_right = 817.0
offset_bottom = 415.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jprcw")
theme_override_font_sizes/font_size = 42
text = "0"
horizontal_alignment = 1

[node name="UI" type="Node2D" parent="Labels"]

[node name="Sprite2D" type="Sprite2D" parent="Labels/UI"]
position = Vector2(1348, 707)
scale = Vector2(10, 10)
texture = SubResource("AtlasTexture_jprcw")

[node name="LeftButton" type="Button" parent="Labels/UI/Sprite2D"]
offset_left = -10.0
offset_top = -10.0
offset_right = 8.0
offset_bottom = 10.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_5rxej")
flat = true

[node name="Sprite2D2" type="Sprite2D" parent="Labels/UI"]
position = Vector2(503, 686)
rotation = -3.14159
scale = Vector2(10, 10)
texture = SubResource("AtlasTexture_jprcw")

[node name="RightButton" type="Button" parent="Labels/UI/Sprite2D2"]
offset_left = -11.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_xxfb2")
flat = true

[node name="ui_anims" type="AnimationPlayer" parent="Labels/UI"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_xxfb2")
}
autoplay = "menu-idle"

[node name="soon-text" type="Label" parent="Labels/UI"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 647.0
offset_top = 965.0
offset_right = 1221.0
offset_bottom = 1042.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jprcw")
theme_override_font_sizes/font_size = 51
text = "Coming Soon"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Labels/UI"]
libraries = {
&"": SubResource("AnimationLibrary_wr0q8")
}

[node name="ShopButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 27.0
offset_top = 752.0
offset_right = 366.0
offset_bottom = 1067.0
theme_override_icons/icon = SubResource("AtlasTexture_xxfb2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qus6b")
theme_override_styles/hover = SubResource("StyleBoxTexture_3rcmp")
theme_override_styles/normal = SubResource("StyleBoxTexture_yd342")
flat = true
expand_icon = true

[node name="Node2D" type="Node2D" parent="."]
visible = false

[node name="UpgradeStat" type="Sprite2D" parent="Node2D"]
self_modulate = Color(1, 1, 1, 0.682353)
position = Vector2(141, 157)
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_rjxss")

[node name="UpgradeStat2" type="Sprite2D" parent="Node2D"]
self_modulate = Color(1, 1, 1, 0.682353)
position = Vector2(530, 157)
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_rjxss")

[node name="UpgradeStat3" type="Sprite2D" parent="Node2D"]
self_modulate = Color(1, 1, 1, 0.682353)
position = Vector2(928, 157)
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_rjxss")

[node name="UpgradeStat4" type="Sprite2D" parent="Node2D"]
self_modulate = Color(1, 1, 1, 0.682353)
position = Vector2(1292, 157)
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_rjxss")

[node name="UpgradeStat5" type="Sprite2D" parent="Node2D"]
self_modulate = Color(1, 1, 1, 0.682353)
position = Vector2(1678, 157)
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_rjxss")

[node name="SubUpgradeStat6" type="Sprite2D" parent="Node2D"]
modulate = Color(0, 0.529412, 0, 1)
self_modulate = Color(1, 1, 1, 0.682353)
position = Vector2(141, 363)
scale = Vector2(3, 3)
texture = SubResource("AtlasTexture_rjxss")

[node name="SubUpgradeStat9" type="Sprite2D" parent="Node2D"]
modulate = Color(0, 0.529412, 0, 1)
self_modulate = Color(1, 1, 1, 0.682353)
position = Vector2(141, 536)
scale = Vector2(3, 3)
texture = SubResource("AtlasTexture_rjxss")

[node name="SubUpgradeStat10" type="Sprite2D" parent="Node2D"]
modulate = Color(0, 0.529412, 0, 1)
self_modulate = Color(1, 1, 1, 0.682353)
position = Vector2(1677, 344)
scale = Vector2(3, 3)
texture = SubResource("AtlasTexture_rjxss")

[node name="SubUpgradeStat11" type="Sprite2D" parent="Node2D"]
modulate = Color(0, 0.529412, 0, 1)
self_modulate = Color(1, 1, 1, 0.682353)
position = Vector2(1682, 530)
scale = Vector2(3, 3)
texture = SubResource("AtlasTexture_rjxss")

[node name="Character" type="Sprite2D" parent="Node2D"]
position = Vector2(926, 713)
scale = Vector2(0.648462, 0.648462)
texture = ExtResource("2_rjxss")

[connection signal="pressed" from="Labels/UI/Sprite2D/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="Labels/UI/Sprite2D2/RightButton" to="." method="_on_right_button_pressed"]
[connection signal="animation_finished" from="Labels/UI/ui_anims" to="." method="_on_ui_anims_animation_finished"]
[connection signal="pressed" from="ShopButton" to="." method="_on_shop_button_pressed"]
